parser/tests/snapshots/cfg_snapshots__multiple statements, early return (dead code).snap
---
source: parser/tests/cfg_snapshots.rs
expression: "parse_cfg_from_statements(\"\n      return 1\n      let a = 1\n      let b = 2\n      let c = 3\n      \")"
---
digraph {
    0 [ label = "Entry" ]
    1 [ label = "Exit" ]
    2 [ label = "BasicBlock(1)" ]
    3 [ label = "BasicBlock(3)" ]
    0 -> 2 [ label = "Normal" ]
    2 -> 1 [ label = "Return" ]
}

