parser/tests/snapshots/cfg_snapshots__nested empty if statements.snap
---
source: parser/tests/cfg_snapshots.rs
expression: "parse_cfg_from_statements(\"\n    if true {\n      if true {\n        let a = 1\n      }\n    }\n    \")"
---
digraph {
    0 [ label = "Entry" ]
    1 [ label = "Exit" ]
    2 [ label = "BranchCondition" ]
    3 [ label = "BranchCondition" ]
    4 [ label = "BasicBlock(1)" ]
    0 -> 2 [ label = "Normal" ]
    2 -> 3 [ label = "ConditionTrue" ]
    3 -> 4 [ label = "ConditionTrue" ]
    4 -> 1 [ label = "Normal" ]
    2 -> 1 [ label = "ConditionFalse" ]
    3 -> 1 [ label = "ConditionFalse" ]
}

