parser/tests/snapshots/cfg_snapshots__nested if statements with deep return.snap
---
source: parser/tests/cfg_snapshots.rs
expression: "parse_cfg_from_statements(\"\n    if true {\n      if true {\n        return 5\n      }\n      let x = 1\n    }\n    let x = 1\n  \")"
---
digraph {
    0 [ label = "Entry" ]
    1 [ label = "Exit" ]
    2 [ label = "BasicBlock(0)" ]
    3 [ label = "BasicBlock(0)" ]
    4 [ label = "BasicBlock(1)" ]
    5 [ label = "BasicBlock(1)" ]
    6 [ label = "BasicBlock(1)" ]
    0 -> 2 [ label = "Normal" ]
    2 -> 3 [ label = "ConditionTrue(2)" ]
    3 -> 4 [ label = "ConditionTrue(2)" ]
    4 -> 1 [ label = "Return" ]
    3 -> 5 [ label = "ConditionFalse(2)" ]
    2 -> 6 [ label = "ConditionFalse(2)" ]
    5 -> 6 [ label = "Normal" ]
    6 -> 1 [ label = "Normal" ]
}

