parser/tests/snapshots/cfg_snapshots__nested if statements, leading and trailing statements.snap
---
source: parser/tests/cfg_snapshots.rs
expression: "parse_cfg_from_statements(\"\n      let a = 1\n      let b = 1\n      if true {\n        let a = 1\n        if true {\n          let a = 1\n        }\n        let b = 1 \n      }\n      let c = 1\n      let d = 1\n      \")"
---
digraph {
    0 [ label = "Entry" ]
    1 [ label = "Exit" ]
    2 [ label = "BasicBlock(2)" ]
    3 [ label = "BranchCondition" ]
    4 [ label = "BasicBlock(1)" ]
    5 [ label = "BranchCondition" ]
    6 [ label = "BasicBlock(1)" ]
    7 [ label = "BasicBlock(1)" ]
    8 [ label = "BasicBlock(2)" ]
    0 -> 2 [ label = "Normal" ]
    2 -> 3 [ label = "Normal" ]
    3 -> 4 [ label = "ConditionTrue" ]
    4 -> 5 [ label = "Normal" ]
    5 -> 6 [ label = "ConditionTrue" ]
    5 -> 7 [ label = "ConditionFalse" ]
    6 -> 7 [ label = "Normal" ]
    3 -> 8 [ label = "ConditionFalse" ]
    7 -> 8 [ label = "Normal" ]
    8 -> 1 [ label = "Normal" ]
}

