parser/tests/snapshots/cfg_snapshots__single if statement, single trailing statement.snap
---
source: parser/tests/cfg_snapshots.rs
expression: "parse_cfg_from_statements(\"\n      if true {\n        let d = 1\n      }\n      let c = 1\n      \")"
---
digraph {
    0 [ label = "Entry" ]
    1 [ label = "Exit" ]
    2 [ label = "BasicBlock(0)" ]
    3 [ label = "BasicBlock(1)" ]
    4 [ label = "BasicBlock(1)" ]
    0 -> 2 [ label = "Normal" ]
    2 -> 3 [ label = "ConditionTrue(2)" ]
    2 -> 4 [ label = "ConditionFalse(2)" ]
    3 -> 4 [ label = "Normal" ]
    4 -> 1 [ label = "Normal" ]
}

